# L2C

./: .gitignore  CMakeLists.txt  Dockerfile.esp32  Dockerfile.musl  Dockerfile.pico  FreeRTOSConfig.h  LICENSE  README.md  build_esp32.sh  build_musl.sh  build_native_l2c.lua  docker-compose.yml  l2c.lua  test_runner.lua
.github/workflows/: ci.yml  esp32-docker.yml  musl-docker.yml  pico-docker.yml
clib/: simdjson_wrapper.cpp  simdjson_wrapper.h  xdp_parser.h  xdp_wrapper.c  xdp_wrapper.h
codegen/: core.lua  declaration.lua  expression.lua  flow.lua  identifier.lua  literal.lua
doc/: MANUAL.md  Project_Master_Blueprint.md
docs/: Project_Master_Blueprint.md
esp32_forge/: CMakeLists.txt
examples/: 02_multicore_ignition.tl  03_spsc_ringbuffer.tl  07_strategy.tl  08_hft_latency.tl  11_hft_sniper.tl  12_multi_ffi_benchmark.tl  13_cjson_parser.tl  14_nn_pub.tl  15_nn_sub.tl  16_uv_timer.tl  17_sqlite_logger.tl  18_simdjson_test.tl  19_pico_blinky.tl  20_pico_sniper.tl  20_pico_sniper_for_multi_cores.tl  21_esp32_blinky.tl  22_setup_veth_test.sh  22_xdp_sniffer.tl  market_injector.py
l2c_cli/: builder.lua  bundler.lua  hardware_forge.lua
std/: cjson.tl  dsp.tl  esp32.tl  freertos.tl  multicore.tl  nanomsg.tl  pico.tl  ringbuffer.tl  simdjson.tl  sqlite.tl  time.tl  uv.tl  xdp.tl  zmq.tl
tests/: 01_if_signal.tl  02_tick_array.tl  03_for_loop.tl  04_tick_arena.tl  05_defensive_arena.tl  06_ffi_libc.tl  07_hft_market_maker.tl  08_while_loop.tl  09_bitwise_mdp3.tl  10_zero_copy_cast.tl  11_static_memory.tl  12_multicore_ignition.tl  12_spsc_single_thread.tl
(+11 files in other folders)
